# background-logo-extension

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  extension.js  metadata.json  metadata.json.in  prefs.js  stylesheet.css
schemas/: org.fedorahosted.background-logo-extension.gschema.xml
